* What will be new in gsl-1.1:

** Fixed bug in gsl_sf_hyperg_1F1_int

** Several routines for handling divided difference polynomials have
been added to the poly/ directory.

** The interpolation routines now include polynomial interpolation,
based on divided-differences.

** Added new random number generators from Knuth's Seminumerical
Algorithms, 3rd Edition: borosh13, coveyou, fishman18, fishman20,
fishman2x, knuthran, knuthran2, lecuyer21, waterman14

** Changed divisor in random number generator gfsr4 from 2^32-1 to
2^32 to prevent exact value of 1.0 from being returned, as specified
in the documentation.

* What was new in gsl-1.0:

** First general release.

** Increased the maximum number of iterations in gsl_poly_complex_solve()
from 30 to 60.

* What was new in gsl-0.9.4:

** Reorganized the multmin functions to use the same interface as the
other iterative solvers.

** Added histogram _alloc functions for consistency, in addition to the
existing _calloc functions.

** Renamed all the gsl_multimin functions to be consistent with the
rest of the library.  An underscore has been removed from _minimizer
in all the function names.

** Renamed the function gsl_sf_coulomb_CL_list to gsl_sf_coulomb_CL_array

** A bug in the multimin functions where the function parameters
(params) were omitted has been fixed.

** A bug in the nonlinear minimization routines has been fixed, which
could prevent the algorithms from converging.  Additional tests from
the NIST reference datasets have been added and these now agree with
MINPACK.

** All the physical constants and conversion factors are now defined as
real numbers to avoid potential problems with integer arithmetic.

** The ODE evolution routines now allow for negative step sizes, and
integrating backwards as well as forwards.

** The implicit Burlisch-Stoer ODE algorithm 'bsimp' now detects
singularities and forces a reduction in step size, preventing runaway
instabilities.
